--- a/index.html
+++ b/index.html
@@ -4,5 +4,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div id="header">
+      <div id="header-image"></div>
+      <h1>Library</h1>
+    </div>
+    <div id="book-display">
+
+    </div>
+  </body>
 </html>
