--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
     <div id="book-display">
       <div id="book-openAddToLibraryModal">+</div>
     </div>
+    <div id="footer"></div>
   </body>
 </html>
