Revise title and card design for comic look

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
       <div id="AddToLibraryWrapper">
         <span class="close">&times;</span>
         <label for="titleInput">Title:</label>
-        <input id="titleInput" type="text">
+        <input id="titleInput" type="text" />
         <label for="authorInput">Author:</label>
-        <input id="authorInput" type="text">
+        <input id="authorInput" type="text" />
         <label for="totalPagesInput">Total Pages:</label>
-        <input id="totalPagesInput" type="text">
+        <input id="totalPagesInput" type="text" />
         <button id="addToLibraryBtn">Add to Library</button>
       </div>
     </div>
     <div id="header">
       <div id="header-image"></div>
-      <h1>Library</h1>
+      <div id="title"><h1 data-shadow="Library">Library</h1></div>
     </div>
     <div id="book-display">
       <div id="book-openAddToLibraryModal">+</div>
