Improve book card 3D effect and animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="title"><h1 data-shadow="Library">Library</h1></div>
     </div>
     <div id="book-display">
-      <div class="book-card"><div id="book-openAddToLibraryModal" class="book-card-cover">+</div></div>
+      <div class="book-card"><div class="book-card-cover-wrapper"><div id="book-openAddToLibraryModal" class="book-card-cover">+</div></div></div>
     </div>
     <div id="footer"></div>
   </body>
