--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <input id="authorInput" type="text" />
         <label for="totalPagesInput">Total Pages:</label>
         <input id="totalPagesInput" type="text" />
+        <label for"checkboxFinished">Finished?</label>
+        <input id="checkboxFinished" type="checkbox" />
         <button id="addToLibraryBtn">Add to Library</button>
       </div>
     </div>
